--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:51:33 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:52:16 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Scottie Scheffler -9
 -1 thru 4</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Justin Thomas(W) -2
 -1 thru 9</td>
       <td>Corey Conners -1
@@ -161,15 +161,15 @@ Missed Cut</td>
       <td>Scottie Scheffler -9
 -1 thru 4</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Justin Thomas(W) -2
 -1 thru 9</td>
       <td>Will Zalatoris E
 +1 thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout">Tony Finau +4
+      <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
+      <td class="greyout">Patrick Cantlay +5
++4 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -193,13 +193,13 @@ Missed Cut</td>
       <td>Scottie Scheffler -9
 -1 thru 4</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Cameron Smith(W) -3
 -1 thru 7</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 10</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 11</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -271,15 +271,15 @@ Missed Cut</td>
       <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-10</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Dustin Johnson(W) -2
 E thru 6</td>
       <td>Corey Conners -1
 E thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 10</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 11</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -287,7 +287,7 @@ Missed Cut</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-9</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Justin Thomas(W) -2
@@ -319,7 +319,7 @@ Missed Cut</td>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-8</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Cameron Smith(W) -3
 -1 thru 7</td>
       <td>Corey Conners -1
@@ -348,22 +348,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -9
--1 thru 4</td>
-      <td>Cameron Smith(W) -3
--1 thru 7</td>
-      <td>Matthew Fitzpatrick +1
-+1 thru 10</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Santorini Sunsets</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -9
@@ -374,26 +358,10 @@ Missed Cut</td>
 E thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 10</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 11</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey B</td>
-      <td class="bigbold">-6</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 4</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Rory McIlroy +2
-E thru 14</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout">Robert MacIntyre +6
-+4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -415,33 +383,49 @@ Missed Cut</td>
       <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-6</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Justin Thomas(W) -2
 -1 thru 9</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 10</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 11</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Lyle Rattray</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">The Dub</td>
+      <td class="bigbold">-6</td>
       <td>Scottie Scheffler -9
+-1 thru 4</td>
+      <td>Cameron Smith(W) -3
+-1 thru 7</td>
+      <td>Matthew Fitzpatrick +1
++1 thru 10</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey B</td>
+      <td class="bigbold">-5</td>
+      <td>Scottie Scheffler(W) -9
 -1 thru 4</td>
       <td>Corey Conners -1
 E thru 7</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay(W) +4
-+3 thru 10</td>
+      <td>Rory McIlroy +2
+E thru 14</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
       <td class="greyout leftborder">Jon Rahm +5
 +3 thru 14</td>
-      <td class="greyout">Sam Burns
-Missed Cut</td>
+      <td class="greyout">Robert MacIntyre +6
++4 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -486,16 +470,32 @@ Missed Cut</td>
 +3 thru 5</td>
       <td>Rory McIlroy(W) +2
 E thru 14</td>
-      <td class="greyout leftborder">Tiger Woods +5
-+4 thru 11</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 12</td>
       <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lyle Rattray</td>
+      <td class="bigbold">-2</td>
+      <td>Scottie Scheffler -9
+-1 thru 4</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay(W) +5
++4 thru 11</td>
+      <td class="greyout leftborder">Jon Rahm +5
++3 thru 14</td>
+      <td class="greyout">Sam Burns
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-2</td>
       <td>Shane Lowry(W) -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Corey Conners -1
 E thru 7</td>
       <td>Joaquin Niemann E
@@ -518,26 +518,10 @@ E thru 7</td>
 +1 thru 7</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout">Jon Rahm(W) +5
+      <td class="greyout leftborder">Jon Rahm(W) +5
 +3 thru 14</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -3
--1 thru 7</td>
-      <td>Justin Thomas(W) -2
--1 thru 9</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
+      <td class="greyout">Patrick Cantlay +5
++4 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -559,7 +543,7 @@ Missed Cut</td>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-1</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Dustin Johnson(W) -2
 E thru 6</td>
       <td>Matthew Fitzpatrick +1
@@ -569,6 +553,22 @@ E thru 6</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">0</td>
+      <td>Cameron Smith -3
+-1 thru 7</td>
+      <td>Justin Thomas(W) -2
+-1 thru 9</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -584,24 +584,8 @@ Missed Cut</td>
 E thru 14</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout">Tiger Woods(W) +5
-+4 thru 11</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Uphill into the Wind</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 4</td>
-      <td>Cameron Smith -3
--1 thru 7</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td>Billy Horschel +10
-+7 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
+      <td class="greyout">Tiger Woods(W) +4
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -617,6 +601,22 @@ E thru 7</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">1</td>
+      <td>Scottie Scheffler(W) -9
+-1 thru 4</td>
+      <td>Cameron Smith -3
+-1 thru 7</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
+      <td>Billy Horschel +10
++7 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -646,8 +646,8 @@ Missed Cut</td>
 E thru 14</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td class="greyout leftborder">Tiger Woods +5
-+4 thru 11</td>
+      <td class="greyout leftborder">Tiger Woods +4
++3 thru 12</td>
       <td class="greyout">Gary Woodland
 Missed Cut</td>
     </tr>
@@ -685,15 +685,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Corey Conners -1
 E thru 7</td>
+      <td>Tiger Woods +4
++3 thru 12</td>
       <td>Jon Rahm(W) +5
 +3 thru 14</td>
-      <td>Tiger Woods +5
-+4 thru 11</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
@@ -732,70 +732,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">7</td>
-      <td>Collin Morikawa E
-+1 thru 7</td>
-      <td>Will Zalatoris E
-+1 thru 7</td>
-      <td>Viktor Hovland(W) +3
--1 (F)</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Lorette Hosegood</td>
-      <td class="bigbold">7</td>
-      <td>Dustin Johnson -2
-E thru 6</td>
-      <td>Rory McIlroy(W) +2
-E thru 14</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">CRED</td>
-      <td class="bigbold">7</td>
-      <td>Scottie Scheffler -9
--1 thru 4</td>
-      <td>Dustin Johnson -2
-E thru 6</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td>Adam Scott +12
-+8 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka(W)
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Roy Jeffrey A</td>
-      <td class="bigbold">7</td>
-      <td>Justin Thomas -2
--1 thru 9</td>
-      <td>Hideki Matsuyama E
-+3 thru 5</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td>Jon Rahm(W) +5
-+3 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">7</td>
       <td>Cameron Smith -3
@@ -812,51 +748,83 @@ E thru 14</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">8</td>
+      <td>Collin Morikawa E
++1 thru 7</td>
+      <td>Will Zalatoris E
++1 thru 7</td>
+      <td>Viktor Hovland(W) +3
+-1 (F)</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
+      <td class="greyout leftborder">Jon Rahm +5
++3 thru 14</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Lorette Hosegood</td>
+      <td class="bigbold">8</td>
+      <td>Dustin Johnson -2
+E thru 6</td>
+      <td>Rory McIlroy(W) +2
+E thru 14</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
+      <td class="greyout leftborder">Jon Rahm +5
++3 thru 14</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">CRED</td>
+      <td class="bigbold">8</td>
+      <td>Scottie Scheffler -9
+-1 thru 4</td>
+      <td>Dustin Johnson -2
+E thru 6</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
+      <td>Adam Scott +12
++8 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka(W)
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Roy Jeffrey A</td>
+      <td class="bigbold">8</td>
+      <td>Justin Thomas -2
+-1 thru 9</td>
+      <td>Hideki Matsuyama E
++3 thru 5</td>
+      <td>Jon Rahm(W) +5
++3 thru 14</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">10</td>
       <td>Collin Morikawa(W) E
 +1 thru 7</td>
       <td>Hideki Matsuyama E
 +3 thru 5</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
       <td>Jon Rahm +5
 +3 thru 14</td>
       <td class="greyout leftborder">Paul Casey
 Out With Injury</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">9</td>
-      <td>Justin Thomas -2
--1 thru 9</td>
-      <td>Rory McIlroy +2
-E thru 14</td>
-      <td>Patrick Cantlay(W) +4
-+3 thru 10</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">10</td>
-      <td>Justin Thomas(W) -2
--1 thru 9</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td>Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout leftborder">Daniel Berger +6
-+4 thru 16</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -873,6 +841,38 @@ E thru 7</td>
       <td class="greyout leftborder">Robert MacIntyre +6
 +4 thru 12</td>
       <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">10</td>
+      <td>Justin Thomas -2
+-1 thru 9</td>
+      <td>Rory McIlroy +2
+E thru 14</td>
+      <td>Patrick Cantlay(W) +5
++4 thru 11</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">11</td>
+      <td>Justin Thomas(W) -2
+-1 thru 9</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
+      <td class="greyout leftborder">Daniel Berger +6
++4 thru 16</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -893,13 +893,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Dustin Johnson -2
 E thru 6</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
       <td>Jon Rahm +5
 +3 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth(W)
@@ -909,15 +909,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa E
 +1 thru 7</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td>Jon Rahm(W) +5
 +3 thru 14</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
