--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:51:33 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 3:52:16 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,15 +145,15 @@ body {
       <td>Scottie Scheffler -9
 -1 thru 4</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Justin Thomas(W) -2
 -1 thru 9</td>
       <td>Will Zalatoris E
 +1 thru 7</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout">Tony Finau +4
+      <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
+      <td class="greyout">Patrick Cantlay +5
++4 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -161,7 +161,7 @@ body {
       <td>Scottie Scheffler(W) -9
 -1 thru 4</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Will Zalatoris E
 +1 thru 7</td>
       <td>Jon Rahm +5
@@ -175,7 +175,7 @@ Missed Cut</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-9</td>
       <td>Shane Lowry -4
--1 thru 4</td>
+-1 thru 5</td>
       <td>Cameron Smith -3
 -1 thru 7</td>
       <td>Justin Thomas(W) -2
@@ -204,22 +204,6 @@ E thru 14</td>
 -1 (F)</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">-3</td>
-      <td>Shane Lowry -4
--1 thru 4</td>
-      <td>Justin Thomas(W) -2
--1 thru 9</td>
-      <td>Corey Conners -1
-E thru 7</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm +5
-+3 thru 14</td>
-      <td class="greyout">Tyrrell Hatton +7
-+5 thru 14</td>
-    </tr>
-    <tr>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -3
@@ -236,18 +220,34 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-2</td>
+      <td>Shane Lowry -4
+-1 thru 5</td>
+      <td>Justin Thomas(W) -2
+-1 thru 9</td>
+      <td>Corey Conners -1
+E thru 7</td>
+      <td>Jon Rahm +5
++3 thru 14</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 11</td>
+      <td class="greyout">Tyrrell Hatton +7
++5 thru 14</td>
+    </tr>
+    <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">1</td>
       <td>Justin Thomas -2
 -1 thru 9</td>
-      <td>Sungjae Im -1
-+2 thru 4</td>
       <td>Collin Morikawa E
 +1 thru 7</td>
+      <td>Sungjae Im E
++3 thru 5</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +4
-+3 thru 10</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 11</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
@@ -268,22 +268,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">John Nixon</td>
-      <td class="bigbold">3</td>
-      <td>Cameron Smith(W) -3
--1 thru 7</td>
-      <td>Collin Morikawa E
-+1 thru 7</td>
-      <td>Rory McIlroy +2
-E thru 14</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">4</td>
       <td>Dustin Johnson -2
@@ -297,6 +281,22 @@ E thru 7</td>
       <td class="greyout leftborder">Xander Schauffele(W)
 Missed Cut</td>
       <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">John Nixon</td>
+      <td class="bigbold">4</td>
+      <td>Cameron Smith(W) -3
+-1 thru 7</td>
+      <td>Collin Morikawa E
++1 thru 7</td>
+      <td>Rory McIlroy +2
+E thru 14</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -333,13 +333,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
-      <td class="bigbold">12</td>
+      <td class="bigbold">13</td>
       <td>Dustin Johnson -2
 E thru 6</td>
       <td>Viktor Hovland +3
 -1 (F)</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
       <td>Jon Rahm +5
 +3 thru 14</td>
       <td class="greyout leftborder">Jordan Spieth(W)
@@ -349,15 +349,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">13</td>
+      <td class="bigbold">14</td>
       <td>Collin Morikawa E
 +1 thru 7</td>
-      <td>Patrick Cantlay +4
-+3 thru 10</td>
       <td>Tony Finau +4
 +2 (F)</td>
       <td>Jon Rahm(W) +5
 +3 thru 14</td>
+      <td>Patrick Cantlay +5
++4 thru 11</td>
       <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
