--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:08:02 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:08:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,6 +139,22 @@ body {
   </tr>
   </thead>
   <tbody>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-17</td>
+      <td>Scottie Scheffler -9
+-1 thru 5</td>
+      <td>Shane Lowry -5
+-2 thru 6</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td class="greyout leftborder">Tony Finau +4
++2 (F)</td>
+      <td class="greyout">Patrick Cantlay +5
++4 thru 12</td>
+    </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-17</td>
@@ -156,20 +172,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-16</td>
-      <td>Scottie Scheffler -9
+      <td class="bigbold">Doug Muir</td>
+      <td class="bigbold">-15</td>
+      <td>Scottie Scheffler(W) -9
 -1 thru 5</td>
-      <td>Shane Lowry -5
--2 thru 6</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td class="greyout leftborder">Tony Finau +4
-+2 (F)</td>
-      <td class="greyout">Patrick Cantlay +5
-+4 thru 12</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Hideki Matsuyama +1
++4 thru 7</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -188,32 +204,16 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-14</td>
-      <td>Scottie Scheffler(W) -9
--1 thru 5</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Hideki Matsuyama +1
-+4 thru 7</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-14</td>
+      <td class="bigbold">-15</td>
       <td>Scottie Scheffler -9
 -1 thru 5</td>
       <td>Cameron Smith(W) -4
 -2 thru 8</td>
       <td>Corey Conners -1
 E thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
       <td class="greyout leftborder">Russell Henley +7
 +4 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -237,18 +237,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-12</td>
+      <td class="bigbold">-13</td>
       <td>Scottie Scheffler -9
 -1 thru 5</td>
       <td>Cameron Smith -4
 -2 thru 8</td>
       <td>Corey Conners -1
 E thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
       <td class="greyout leftborder">Viktor Hovland +3
 -1 (F)</td>
       <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-12</td>
+      <td>Shane Lowry -5
+-2 thru 6</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +2
++2 thru 11</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -262,25 +278,9 @@ Missed Cut</td>
 E thru 8</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
-      <td class="greyout leftborder">Tyrrell Hatton +7
-+5 thru 14</td>
+      <td class="greyout leftborder">Tyrrell Hatton +6
++4 thru 15</td>
       <td class="greyout">Sam Burns
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
-      <td>Shane Lowry -5
--2 thru 6</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +2
-+2 thru 11</td>
-      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -300,6 +300,22 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-9</td>
+      <td>Scottie Scheffler -9
+-1 thru 5</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Webb Simpson +2
++1 thru 12</td>
+      <td class="greyout leftborder">Jon Rahm(W) +6
++4 thru 15</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-9</td>
       <td>Shane Lowry -5
@@ -314,22 +330,6 @@ E thru 8</td>
 -1 (F)</td>
       <td class="greyout">Jon Rahm +6
 +4 thru 15</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -9
--1 thru 5</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Webb Simpson +2
-+1 thru 12</td>
-      <td class="greyout leftborder">Jon Rahm(W) +6
-+4 thru 15</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Baggy Pants</td>
@@ -365,13 +365,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
-      <td class="bigbold">-6</td>
+      <td class="bigbold">-7</td>
       <td>Scottie Scheffler(W) -9
 -1 thru 5</td>
       <td>Corey Conners -1
 E thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
       <td>Jon Rahm +6
 +4 thru 15</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -460,6 +460,38 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +5
++4 thru 12</td>
+      <td class="greyout">Jon Rahm(W) +6
++4 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-3</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Corey Conners -1
+E thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Rory McIlroy +1
+-1 thru 16</td>
+      <td class="greyout leftborder">Jon Rahm +6
++4 thru 15</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -4
@@ -474,22 +506,6 @@ E thru 8</td>
 +4 thru 15</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +5
-+4 thru 12</td>
-      <td class="greyout">Jon Rahm(W) +6
-+4 thru 15</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -508,20 +524,36 @@ E thru 8</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">New Lu</td>
       <td class="bigbold">-2</td>
+      <td>Cameron Smith -4
+-2 thru 8</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Patrick Cantlay +5
++4 thru 12</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-2</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Collin Morikawa E
++1 thru 9</td>
       <td>Rory McIlroy +1
 -1 thru 16</td>
-      <td class="greyout leftborder">Jon Rahm +6
-+4 thru 15</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Tiger Woods(W) +4
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -540,36 +572,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">0</td>
       <td>Cameron Smith -4
 -2 thru 8</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Patrick Cantlay +5
-+4 thru 12</td>
+      <td>Corey Conners(W) -1
+E thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-1</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Rory McIlroy +1
--1 thru 16</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Tiger Woods(W) +4
-+3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Uphill into the Wind</td>
@@ -604,19 +620,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">1</td>
-      <td>Cameron Smith -4
--2 thru 8</td>
-      <td>Corey Conners(W) -1
+      <td>Corey Conners -1
 E thru 8</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Jon Rahm +6
-+4 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Collin Morikawa E
++1 thru 9</td>
+      <td>Rory McIlroy +1
+-1 thru 16</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -652,22 +668,6 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">2</td>
-      <td>Corey Conners -1
-E thru 8</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Rory McIlroy +1
--1 thru 16</td>
-      <td class="greyout leftborder">Viktor Hovland +3
--1 (F)</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">4</td>
       <td>Justin Thomas -2
@@ -700,6 +700,38 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">6</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm +6
++4 thru 15</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Kash Ahmad</td>
+      <td class="bigbold">6</td>
+      <td>Justin Thomas -2
+-1 thru 10</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Viktor Hovland +3
+-1 (F)</td>
+      <td>Jon Rahm(W) +6
++4 thru 15</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">6</td>
       <td>Cameron Smith -4
@@ -716,44 +748,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">7</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm +6
-+4 thru 15</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">7</td>
-      <td>Justin Thomas -2
--1 thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Viktor Hovland +3
--1 (F)</td>
-      <td>Jon Rahm(W) +6
-+4 thru 15</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">8</td>
+      <td class="bigbold">7</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
       <td>Collin Morikawa E
 +1 thru 9</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
       <td>Viktor Hovland(W) +3
 -1 (F)</td>
       <td>Patrick Cantlay +5
