--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:08:02 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 09, 4:08:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-16</td>
+      <td class="bigbold">-17</td>
       <td>Scottie Scheffler -9
 -1 thru 5</td>
       <td>Shane Lowry -5
 -2 thru 6</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
       <td class="greyout leftborder">Tony Finau +4
 +2 (F)</td>
       <td class="greyout">Patrick Cantlay +5
@@ -157,15 +157,15 @@ body {
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Shane Lowry -5
 -2 thru 6</td>
       <td>Cameron Smith -4
 -2 thru 8</td>
       <td>Justin Thomas(W) -2
 -1 thru 10</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +2
 +2 thru 11</td>
       <td class="greyout">Brooks Koepka
@@ -173,13 +173,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-10</td>
+      <td class="bigbold">-11</td>
       <td>Scottie Scheffler(W) -9
 -1 thru 5</td>
       <td>Shane Lowry -5
 -2 thru 6</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
       <td>Jon Rahm +6
 +4 thru 15</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -232,8 +232,24 @@ E thru 8</td>
 +4 thru 12</td>
       <td class="greyout leftborder">Jon Rahm +6
 +4 thru 15</td>
-      <td class="greyout">Tyrrell Hatton +7
-+5 thru 14</td>
+      <td class="greyout">Tyrrell Hatton +6
++4 thru 15</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">1</td>
+      <td>Justin Thomas(W) -2
+-1 thru 10</td>
+      <td>Will Zalatoris -1
+E thru 9</td>
+      <td>Collin Morikawa E
++1 thru 9</td>
+      <td>Tony Finau +4
++2 (F)</td>
+      <td class="greyout leftborder">Daniel Berger +6
++4 thru 17</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -248,22 +264,6 @@ E thru 8</td>
 -1 (F)</td>
       <td class="greyout leftborder">Patrick Cantlay +5
 +4 thru 12</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">2</td>
-      <td>Justin Thomas(W) -2
--1 thru 10</td>
-      <td>Collin Morikawa E
-+1 thru 9</td>
-      <td>Will Zalatoris E
-+1 thru 8</td>
-      <td>Tony Finau +4
-+2 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +6
-+4 thru 17</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
